# degrad

./: .env.example  .gitignore  README.md  docker-compose.yml  prestart.sh  requirements.txt  run.sh  traefik.toml
api/: Dockerfile  alembic.ini  prestart.sh  pyproject.toml  requirements.txt  run.sh  start.sh
api/alembic/: env.py
api/alembic/versions/: 4ccd6d17fd81_utc_datetime.py  9e93ffcaf924_fist_migration.py  c473e4086167_initial_scheme.py
api/app/: config.py  crud.py  database.py  db.py  main.py  models.py
app/: config.py  crud.py  database.py  db.py  main.py  models.py  schemas.py
backend/: crud.py  main.py  models.py  schemas.py
dashboard/: app.py  app_utils.py
database/: Dockerfile  init-user.sql
frontend/: app.py  app_utils.py
grafana/: Dockerfile  grafana.ini
grafana/dashboards/: degra_monitor.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: datasource.yml
